feat(exercicios-oo): implementar carrinho de compras e item

--- a/src/modulo-03-web/dia-03/index.html
+++ b/src/modulo-03-web/dia-03/index.html
@@ -5,8 +5,8 @@
   <title>Exemplo exercício coleções JS</title>
 </head>
 <body>
-  <h3>Elfo JS</h3>
-  <script type="text/javascript" src="Elfo.js">
-  </script>
+  <h3>Classes JS</h3>
+  <script type="text/javascript" src="Elfo.js"></script>
+  <script type="text/javascript" src="exercicios-oo.js"></script>
 </body>
 </html>
