refactor(organizar): separar em dois arquivos

--- a/src/modulo-03-web/dia-03/index.html
+++ b/src/modulo-03-web/dia-03/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h3>Classes JS</h3>
-  <script type="text/javascript" src="Elfo.js"></script>
-  <script type="text/javascript" src="exercicios-oo.js"></script>
+  <script type="text/javascript" src="Item.js"></script>
+  <script type="text/javascript" src="CarrinhoDeCompras.js"></script>
 </body>
 </html>
