--- a/src/modulo-03-web/dia-05/jQuery-ajax/consulta-ecletica.html
+++ b/src/modulo-03-web/dia-05/jQuery-ajax/consulta-ecletica.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Consulta eclética</title>
+  <link rel="stylesheet" href="css/modules.css">
 </head>
-<body>
+<body class="text-center">
   <input id="artista" type="text">
   <input id="submit" type="button" value="submit">
-  <ul class="albuns"></ul>
+  <ul class="no-list-style albuns"></ul>
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="js/consulta-ecletica.js"></script>
 </body>
