feat(ranking): implementar exibição do ranking

--- a/src/modulo-03-web/jogo da forca/index.html
+++ b/src/modulo-03-web/jogo da forca/index.html
@@ -57,6 +57,9 @@
     <input type="text" id="palpite"name="name" value="" placeholder="Palpite">
     <button type="button" id="btnPalpite" name="button">Palpitar</button>
   </div>
+  <div class="rank">
+    <ul></ul>
+  </div>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="Utils/String.js"></script>
   <script type="text/javascript" src="js/jogador.js"></script>
