--- a/src/modulo-03-web/jogo da forca/index.html
+++ b/src/modulo-03-web/jogo da forca/index.html
@@ -8,14 +8,12 @@
 <body>
 
   <div class="form-container">
-    <form class="formulario" action="" method="get">
-      <input class="nome" type="text" placeholder="Digite seu nome" name="name" value="">
-      <select class="" name="">
-        <option value"normal">normal</option>
-        <option value"nunez">nunez</option>
-      </select>
-      <input class="iniciar" type="button" name="name" value="Iniciar jogo">
-    </form>
+    <input class="nome" type="text" placeholder="Digite seu nome" name="name" value="">
+    <select class="dificuldade" name="">
+      <option value"normal">normal</option>
+      <option value"nunez">nunez</option>
+    </select>
+    <input class="iniciar" type="button" name="name" value="Iniciar jogo">
   </div>
   <div class="palavra ocultar"></div>
   <div class="teclado">
