feat(pontos):implementar pontuação

--- a/src/modulo-03-web/jogo da forca/index.html
+++ b/src/modulo-03-web/jogo da forca/index.html
@@ -58,6 +58,8 @@
   <div class="rank">
     <ul></ul>
   </div>
+  <div class="jogador-info ocultar"></div>
+  <div class="pontos ocultar"></div>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="Utils/String.js"></script>
   <script type="text/javascript" src="js/jogador.js"></script>
