feat(toogleVisible): implementar função para alterar visibilidade do elemento

--- a/src/modulo-03-web/jogo da forca/index.html
+++ b/src/modulo-03-web/jogo da forca/index.html
@@ -16,7 +16,7 @@
     <input class="iniciar" type="button" name="name" value="Iniciar jogo">
   </div>
   <div class="palavra ocultar"></div>
-  <div class="teclado">
+  <div class="teclado ocultar">
     <div class="row">
       <input id="Q" type="button" class="botao" value="Q">
       <input id="W" type="button" class="botao" value="W">
