feat(dica): implementar botão para dica

--- a/src/modulo-03-web/jogo da forca/index.html
+++ b/src/modulo-03-web/jogo da forca/index.html
@@ -65,6 +65,10 @@
     <input id="reiniciar" type="button" name="name" value="reiniciar">
   </div>
   <div class="game-over animation ocultar">Game Over</div>
+  <div class="dica animation ocultar">
+    <input class="showHint" type="button" name="name" value="Dica!">
+    <div class="hint animation ocultar">Teste</div>
+  </div>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="Utils/String.js"></script>
   <script type="text/javascript" src="js/jogador.js"></script>
