fix(index): corrigir warnings

--- a/src/modulo-03-web/jogo da forca/index.html
+++ b/src/modulo-03-web/jogo da forca/index.html
@@ -10,8 +10,8 @@
   <div class="form-container ocultar animation">
     <input class="nome" type="text" placeholder="Digite seu nome" name="name" value="">
     <select class="dificuldade" name="">
-      <option value"normal">normal</option>
-      <option value"nunez">nunez</option>
+      <option value="normal">normal</option>
+      <option value="nunez">nunez</option>
     </select>
     <input class="iniciar" type="button" name="name" value="Iniciar jogo">
   </div>
@@ -52,7 +52,7 @@
     </div>
   </div>
   <div class="row palpite animation ocultar">
-    <input type="text" id="palpite"name="name" value="" placeholder="Palpite">
+    <input type="text" id="palpite" name="name" value="" placeholder="Palpite">
     <button type="button" id="btnPalpite" name="button">Palpitar</button>
   </div>
   <div class="rank animation ocultar">
@@ -75,6 +75,5 @@
   <script type="text/javascript" src="js/banco.js"></script>
   <script type="text/javascript" src="js/jogo.js"></script>
   <script type="text/javascript" src="js/controller.js"></script>
-</body>
 </body>
 </html>
