refactor(jogo.css): alterar local e modo de exibição do rank

--- a/src/modulo-03-web/jogo da forca/index.html
+++ b/src/modulo-03-web/jogo da forca/index.html
@@ -61,8 +61,8 @@
   <div class="jogador-info animation ocultar"></div>
   <div class="pontos animation ocultar"></div>
   <div class="opcoes animation ocultar">
-    <input id="top5" type="button" name="name" value="top 5">
-    <input id="reiniciar" type="button" name="name" value="reiniciar">
+    <input id="top5" type="button" name="name" value="Top 5">
+    <input id="reiniciar" type="button" name="name" value="Reiniciar">
   </div>
   <div class="game-over animation ocultar">Game Over</div>
   <div class="dica animation ocultar">
