--- a/src/modulo-03-web/jogo da forca/index.html
+++ b/src/modulo-03-web/jogo da forca/index.html
@@ -5,7 +5,7 @@
   <title></title>
   <link rel="stylesheet" href="css/jogo.css">
 </head>
-<body>
+<body class="body">
 
   <div class="form-container ocultar animation">
     <input class="nome" type="text" placeholder="Digite seu nome" name="name" value="">
@@ -68,6 +68,10 @@
   <div class="dica animation ocultar">
     <input class="showHint" type="button" name="name" value="Dica!">
     <div class="hint animation ocultar">Teste</div>
+  </div>
+  <div class="personalizar">
+    <div class="pointer"></div>
+    <div class="cores"></div>
   </div>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="Utils/String.js"></script>
