feat(index): adicionar título na página

--- a/src/modulo-03-web/jogo da forca/index.html
+++ b/src/modulo-03-web/jogo da forca/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Jogo da forca</title>
   <link rel="stylesheet" href="css/jogo.css">
 </head>
 <body class="body">
